Finalized with logo

--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "GetFocused",
-    "slug": "getfocused",
+    "name": "Get Focused",
+    "slug": "get-focused",
+    "privacy": "public",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashLogo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ddd"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -24,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.junaid_native.getfocused"
     },
     "web": {
       "favicon": "./assets/favicon.png"
